# Vlither-android

./: .gitignore  ANDROID.md  README.md  project.lua
.github/workflows/: android.yml
android/: .trashed-1784439506-build.gradle  .trashed-1785148731-build.gradle  gradlew  settings.gradle
android/app/: .trashed-1785148920-build.gradle  build.gradle  keystore.properties  keystore.properties.example
android/app/src/main/cpp/: CMakeLists.txt
app/src/: .trashed-1785148732-android_path.h  .trashed-1785148732-constants.h  .trashed-1785148733-main.c  android_glfw_shim.h  android_jni.c  android_jni.h  android_path.c  android_path.h  constants.h  imgui_setup.c  imgui_setup.h  imgui_setup_android.c  main.c  user.h
app/src/cimgui/: .trashed-1784439508-cimgui_impl.h  cimgui_impl.cpp
app/src/game/: .trashed-1785148733-input.c  .trashed-1785148733-oef.c  body_part.h  food.h  game_data.c  game_data.h  gpt.h  input.c  input.h  loop.c  loop.h  oef.c  oef.h  prey.h  redraw.c  redraw.h  sbot.c  sbot.h  snake.h  ui_overlay.c  ui_overlay.h  user_settings.c  user_settings.h
app/src/network/: .trashed-1784439508-ntl_client.c  .trashed-1784439508-ntl_client.h  .trashed-1784439508-server.c  callback.c  callback.h  ntl_client.c  ntl_client.h  server.c  server.h
app/src/rendering/: bd_renderer.h  bg_renderer.h  bp_renderer.h  bst_renderer.h  fd_renderer.h  mm_renderer.h  renderer.c  renderer.h  spr_renderer.h  texture.c  texture.h
app/src/ui/: .trashed-1785148734-key_buttons.c  .trashed-1785148734-settings.c  .trashed-1785148734-title_screen.c  chat.c  chat.h  key_buttons.c  key_buttons.h  ntl_panel.c  ntl_panel.h  settings.c  settings.h  skin_editor.c  skin_editor.h  title_screen.c  title_screen.h  viewport.c  viewport.h
thermite/src/: thermite.h
thermite/src/core/: .trashed-1785148919-tentry.c  tentry.c  tentry.h  tentry_android.c  tenv.h
thermite/src/framework/: .trashed-1784439514-tkeyboard.c  .trashed-1784439514-tmouse.c  .trashed-1784439514-twindow.c  tkeyboard.c  tmouse.c  (+7 more)
(+19 files in other folders)
